--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -236,6 +236,7 @@ input[type="tel"],
 input[type="url"],
 input[type="password"],
 input[type="date"],
+input[type="time"],
 textarea,
 select {
   height: 38px;
@@ -253,6 +254,8 @@ input[type="text"],
 input[type="tel"],
 input[type="url"],
 input[type="password"],
+input[type="date"],
+input[type="time"],
 textarea {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -268,6 +271,8 @@ input[type="text"]:focus,
 input[type="tel"]:focus,
 input[type="url"]:focus,
 input[type="password"]:focus,
+input[type="date"]:focus,
+input[type="time"]:focus,
 textarea:focus,
 select:focus {
   border: 1px solid #33C3F0;
