Nicer styling of notification count

--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -27,7 +27,9 @@
                data-anchor-for="[data-floating-notifications]"
                >Varsler
                 <% if current_user.new_notifications.size != 0 %>
-                    <span class="top-bar__notification-count"><%= current_user.new_notifications.size %></span>
+                    <span class="top-bar__notification-count">
+                        <%= current_user.new_notifications.size %>
+                    </span>
                 <% end %>
             </span>
 
