--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -64,18 +64,19 @@ $top-bar-height: 52px;
     }
     
     &__notification-count {
-        background-color: red;
-        color: white;
-        font-weight: bold;
-        padding: 2px 4px 2px 4px;
-        border-radius: 4px;
-        font-size: 8px;
+        height: 18px;
+        min-width: 18px;
+        line-height: 18px;
+        font-size: 11px;
+        border-radius: 18px;
+        padding-left: 3px;
+        padding-right: 3px;
+        background-color: #e7384a;
+        display: inline-block;
         position: relative;
         top: -10px;
         left: -4px;
-        -webkit-box-shadow: 1px 1px 1px 0px #000;
-        -moz-box-shadow: 1px 1px 1px 0px #000;
-        box-shadow: 1px 1px 1px 0px #000;
+        text-align: center;
     }
 
     &__top-section {
