Use unnoticed count for notifications in top bar. Show at most 10 notifications

--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -27,8 +27,8 @@
                data-anchor-for="[data-floating-notifications]"
                data-clear-notifications-url="<%= mark_all_notifications_noticed_users_path %>"
                >Varsler
-                <% if current_user.new_notifications.size != 0 %>
-                    <span class="top-bar__notification-count"><%= current_user.new_notifications.size %></span>
+                <% if current_user.unseen_notifications_count != 0 %>
+                    <span class="top-bar__notification-count"><%= current_user.unseen_notifications_count %></span>
                 <% end %>
             </span>
 
@@ -59,7 +59,7 @@
 
         <ol class="notification-box__list">
 
-            <% current_user.new_notifications.each do |n| %>
+            <% current_user.recent_notifications.each do |n| %>
 
                 <li class="notification-box__row row">
                     <div class="two columns u-center">
