--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -23,12 +23,12 @@
             </strong>
 
             <span class="top-bar__top-section"
-               data-controller="menuAnchor test"
+               data-controller="menuAnchor resetUnseenNotificationCount"
                data-anchor-for="[data-floating-notifications]"
                data-clear-notifications-url="<%= mark_all_notifications_noticed_users_path %>"
                >Varsler
                 <% if current_user.unseen_notifications_count != 0 %>
-                    <span class="top-bar__notification-count"><%= current_user.unseen_notifications_count %></span>
+                    <span class="top-bar__notification-count" data-notification-count><%= current_user.unseen_notifications_count %></span>
                 <% end %>
             </span>
 
