--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,5 +1,23 @@
 <h1>Editing Booking</h1>
 
+<!-- # FIXME: should be a partial, same as in new.html.erb -->
+            <%= @ad.ad_items.each do |ai| %>
+                Ad Item: <%= ai.id  %>
+                <div class="row availability-section__calendar-holder">
+                    <div class="availability-section__calendar-holder-inner">
+                        <% today = Date.today() %>
+                        <div class="six columns">
+                            <h4 class="availability-section__month"><%= today.strftime("%B - %Y") %></h4>
+                            <%= render partial: "shared/month_calendar", locals: { date: today, ad: @ad } %>
+                        </div>
+                        <div class="six columns">
+                            <h4 class="availability-section__month"><%= today.next_month.strftime("%B - %Y") %></h4>
+                            <%= render partial: "shared/month_calendar", locals: { date: today.next_month, ad: @ad } %>
+                        </div>
+                    </div>
+                </div>
+            <% end %>
+
 <%= render 'form' %>
 
 <%= link_to 'Show', @booking %> |
