--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -2,6 +2,8 @@
     <div class="row u-push-down">
         <div class="eight columns">
             <h1>Ny forespørsel</h1>
+
+<!-- # FIXME: should be a partial, same as in edit.html.erb -->
             <%= @ad.ad_items.each do |ai| %>
                 Ad Item: <%= ai.id  %>
                 <div class="row availability-section__calendar-holder">
