--- a/app/views/bookings/_incoming_request_item.html.erb
+++ b/app/views/bookings/_incoming_request_item.html.erb
@@ -10,42 +10,7 @@
             <p>
                 <%= booking.ad.summary %>
             </p>
-            <p><%= booking.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS: <b><%= booking.booking_status.status %></b></p>
+            <p><%= booking.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS: <b><%= booking.status %></b></p>
         </div>
     </div>
 </div>
-
-
-<!--
-<table>
-  <thead>
-    <tr>
-      <th>Ad item</th>
-      <td>Ad Owner*</td>
-      <th>Requester user</th>
-      <th>Booking status</th>
-      <th>Price</th>
-      <th>Booking from</th>
-      <th>Booking to</th>
-      <th>First reply at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-      <tr>
-        <td><%= booking.ad_item_id %> [<small><%= booking.ad.title %></small>]</td>
-        <td>[<small><%= booking.ad.user.name %></small>] </td>
-        <td><%= booking.from_user_id %> [<small><%= booking.from_user.name %></small>]</td>
-        <td><%= booking.booking_status_id %> [<small><%= booking.booking_status.status %></small>]</td>
-        <td><%= booking.price %></td>
-        <td><%= booking.booking_from %></td>
-        <td><%= booking.booking_to %></td>
-        <td><%= booking.first_reply_at %></td>
-        <td><%= link_to 'Show', booking %></td>
-        <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
-        <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-  </tbody>
-</table>
--->
