--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <%= favicon_link_tag       'logos/favicon_raw.png' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag    '//fonts.googleapis.com/css?family=Raleway:400,300,600' %>
+    <%= stylesheet_link_tag    'http://fonts.googleapis.com/css?family=Lato:300,400,700' %>
 
     <%= javascript_include_tag '//maps.googleapis.com/maps/api/js?key=AIzaSyAwciykMKFfGsTiDrqAwg80C5FCSq6vQr8' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
