--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -48,35 +48,51 @@
 
 <% if user_signed_in? %>
 
+    <% notifications = current_user.recent_notifications %>
+
     <div class="notification-box u-hidden" data-floating-notifications>
         <span class="notification-box__up-triangle"></span>
         <div class="notification-box__top">
             <span>Varsler</span>
-            <span class="u-pull-right">
-                <a href="#">Merk alles som lest</a>
-                •
-                <a href="#">Innstillinger</a>
-            </span>
+            <% if notifications.any? %>
+                <span class="u-pull-right">
+                    <a href="#">Merk alle som lest</a>
+                    •
+                    <a href="#">Innstillinger</a>
+                </span>
+            <% end %>
         </div>
 
         <ol class="notification-box__list">
 
-            <% current_user.recent_notifications.each do |n| %>
-
+            <% if notifications.any? %>
+                <% current_user.recent_notifications.each do |n| %>
+                    <li class="notification-box__row row">
+                        <div class="two columns u-center">
+                            <%= render('shared/avatar.html', user: n.source_user, size: "small") %>
+                        </div>
+                        <div class="ten columns">
+                            <p class="notification-box__para">
+                                <%= link_to n.message, n.source_path %>
+                            </p>
+                            <p class="notification-box__para">
+                                <small><%= n.updated_at.to_formatted_s(:plendit_short_datetime) %></small>
+                            </p>
+                        </div>
+                    </li>
+                <% end %>
+            <% else %>
                 <li class="notification-box__row row">
                     <div class="two columns u-center">
-                        <%= render('shared/avatar.html', user: n.source_user, size: "small") %>
                     </div>
                     <div class="ten columns">
                         <p class="notification-box__para">
-                            <%= link_to n.message, n.source_path %>
+                            Ingen varsler.
                         </p>
                         <p class="notification-box__para">
-                            <small><%= n.updated_at.to_formatted_s(:plendit_short_datetime) %></small>
                         </p>
                     </div>
                 </li>
-
             <% end %>
 
         </ol>
