Added forrest image, use it on frontpage

--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -4,7 +4,7 @@
 .front-search-block {
     padding-top: 80px;
     height: 500px;
-    background-image: image-url('garage.jpg');
+    background-image: image-url('forrest.jpg');
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
