--- a/app/assets/stylesheets/_tag_editor.scss
+++ b/app/assets/stylesheets/_tag_editor.scss
@@ -2,7 +2,7 @@
     border: solid thin #D1D1D1;
     border-radius: 4px;
     padding: 12px;
-    height: 120px;
+    min-height: 65px;
     background-color: white;
 
     &__input {
@@ -25,6 +25,9 @@
         border-radius: 4px;
         margin-right: 12px;
         position: relative;
+        white-space: nowrap;
+        display: inline-block;
+        margin-bottom: 12px;
     
         &::after {
             content: "x";
