--- a/app/assets/stylesheets/_notification_box.scss
+++ b/app/assets/stylesheets/_notification_box.scss
@@ -1,6 +1,8 @@
 @import 'constants.scss';
 
 .notification-box {
+    background-color: white;
+
     &__up-triangle {
         display: none;
     }
