Use tag editor on filter

--- a/app/assets/stylesheets/_search_filter_section.scss
+++ b/app/assets/stylesheets/_search_filter_section.scss
@@ -3,6 +3,7 @@
 .search-filter-section {
     background-color: white;
     padding-top: $standard-spacing;
+    padding-bottom: $standard-spacing;
 
     &__form {
         margin-bottom: 0;
