--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -57,7 +57,7 @@
                         <%= label_tag(:tags, "Tags:") %>
                     </div>
                     <div class="ten columns">
-                        <input type="text">
+                        <div data-controller="tageditor" class="tag-editor"></div>
                     </div>
                 </div>
             <% end %>
