--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -16,9 +16,13 @@
             </div>
         </div>
     </div>
-
-    <div style="border: solid thin red;">
-        New map placeholder
-    </div>
-
 </div>
+
+<% if defined? @ad.location.lat and defined? @ad.location.lon %>
+    <section class="ad-location-map">
+        <div class="ad-location-map__map"
+             data-geolocation="<%= @ad.location.lat %>,<%= @ad.location.lon %>"
+             data-controller="adMap">
+        <div>
+    </section>
+<% end %>
