--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="about-footer u-push-down">
+<footer class="about-footer">
     <div class="container">
         <div class="row">
             <div class="four columns">
