Twiddling search filters

--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -42,13 +42,10 @@
                         <input class="search-filter-section__text-input" type="text" placeholder="Gatenavn">
                     </div>
                     <div class="two columns">
-                        <input class="search-filter-section__text-input" type="text" placeholder="By">
-                    </div>
-                    <div class="two columns">
-                        <input class="search-filter-section__text-input" type="text" placeholder="Fylke">
-                    </div>
-                    <div class="two columns">
                         <input class="search-filter-section__text-input" type="text" placeholder="Postnr">
+                    </div>
+                    <div class="four columns">
+                        <input class="search-filter-section__text-input" type="text" placeholder="Poststed" disabled>
                     </div>
                 </div>
 
