Added some json search functionality

--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -11,7 +11,7 @@
             <small>Filter</small>
         </span>
 
-        <div data-filter-container>
+        <div data-filter-container data-controller="searchFilterSelection">
             <%= form_tag({}, class: "search-filter-section__form") do %>
 
                 <div class="row search-filter-section__row">
@@ -57,6 +57,16 @@
                         <div data-controller="tageditor" class="tag-editor"></div>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="two columns">
+                        <%= label_tag(:q, "Term:") %>
+                    </div>
+                    <div class="ten columns">
+                        <%= text_field_tag(:q) %>
+                    </div>
+                </div>
+
             <% end %>
         </div>
     </div>
