--- a/app/assets/stylesheets/_ad_booking_box.scss
+++ b/app/assets/stylesheets/_ad_booking_box.scss
@@ -2,15 +2,19 @@
 
 .ad-booking-box {
     position: relative;
-    top: -46px;
-    left: -22px;
     background-color: $color-background;
     border: solid thin $color-box-border;
+
+    @media screen and (min-width: 640px) {
+        top: -46px;
+        left: -22px;
+    }
 
     &__title {
         background-color: $color-plendit-blue;
         color: white;
         padding: $standard-spacing / 2;
+        margin-bottom: 0;
     }
 
     &__calendar-holder {
