Added single pageable calendar, hooked it up to booking box

--- a/app/assets/stylesheets/_calendars.scss
+++ b/app/assets/stylesheets/_calendars.scss
@@ -73,7 +73,7 @@ $cell-margin: 2px;
     // heading, day name
     &__cell--header {
         font-weight: bold;
-        background-color: $color-subtle-gray-background;
+        background-color: $color-background;
         border: none;
     }
 
