Proper styling of period box in booking box

--- a/app/assets/stylesheets/_ad_booking_box.scss
+++ b/app/assets/stylesheets/_ad_booking_box.scss
@@ -24,5 +24,9 @@
     &__button-holder {
         text-align: center;
     }
-}
 
+    &__period {
+        font-size: 70%;
+        float: right;
+    }
+}
