Moved notifications into their own partial

--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -46,56 +46,4 @@
 
 </div>
 
-<% if user_signed_in? %>
-
-    <% notifications = current_user.recent_notifications %>
-
-    <div class="notification-box u-hidden" data-floating-notifications>
-        <span class="notification-box__up-triangle"></span>
-        <div class="notification-box__top">
-            <span>Varsler</span>
-            <% if notifications.any? %>
-                <span class="u-pull-right">
-                    <a href="#">Merk alle som lest</a>
-                    •
-                    <a href="#">Innstillinger</a>
-                </span>
-            <% end %>
-        </div>
-
-        <ol class="notification-box__list">
-
-            <% if notifications.any? %>
-                <% current_user.recent_notifications.each do |n| %>
-                    <li class="notification-box__row row">
-                        <div class="two columns u-center">
-                            <%= render('shared/avatar.html', user: n.source_user, size: "small") %>
-                        </div>
-                        <div class="ten columns">
-                            <p class="notification-box__para">
-                                <%= link_to n.message, n.source_path %>
-                            </p>
-                            <p class="notification-box__para">
-                                <small><%= n.updated_at.to_formatted_s(:plendit_short_datetime) %></small>
-                            </p>
-                        </div>
-                    </li>
-                <% end %>
-            <% else %>
-                <li class="notification-box__row row">
-                    <div class="two columns u-center">
-                    </div>
-                    <div class="ten columns">
-                        <p class="notification-box__para">
-                            Ingen varsler.
-                        </p>
-                        <p class="notification-box__para">
-                        </p>
-                    </div>
-                </li>
-            <% end %>
-
-        </ol>
-
-    </div>
-<% end %>
+<%= render partial: 'notifications' %>
