--- a/app/assets/stylesheets/_notification_box.scss
+++ b/app/assets/stylesheets/_notification_box.scss
@@ -16,7 +16,8 @@
         margin-bottom: 0;
     }
 
-    &__row {
+    &__row,
+    &__row--read {
         padding: $standard-spacing / 3;
         margin-bottom: 0;
         list-style: none;
@@ -25,10 +26,10 @@
         &:last-of-type {
             border-bottom: 0;
         }
+    }
 
-        &:nth-of-type(even) {
-            background-color: $color-subtle-gray-background;
-        }
+    &__row--read {
+        background-color: $color-subtle-gray-background;
     }
 
     &__para {
