--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="ad-title-image"><%= image_tag @ad.image_url_with_fallback(:medium), class: "ad-title-image__img" %></div>
+    <div class="ad-title-image"><%= image_tag @ad.image_url_with_fallback(:hero), class: "ad-title-image__img" %></div>
 
     <div class="row">
         <div class="eight columns">
