--- a/app/views/ads/_booking_request_form.html.erb
+++ b/app/views/ads/_booking_request_form.html.erb
@@ -23,7 +23,7 @@
             <%= form_for( FavoriteAd.new ) do |f| %>
                 <%= f.hidden_field :ad_id, value: @ad.id.to_s %>
                 <%= f.hidden_field :previous_url, value: request.fullpath %>
-                <% if @ad_is_favorite %>
+                <% if @ad.is_favorite_of(current_user) %>
                     <%= f.button class: "booking-request-form__book-button" do %>
                         <%= image_tag("favorite_icon.png", size: "23x22", alt: "", class: "booking-request-form__heart--favorite") %>
                         Fjern fra favoritter
