--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -9,9 +9,7 @@
         <div class="eight columns">
             <%= render partial: "ad_title_box", locals: { ad: @ad } %>
             <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
-            <div style="border: solid thin red;">
-                New gallery placeholder
-            </div>
+            <%= render partial: "ad_gallery_mosaic", locals: { ad: @ad } %>
             <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
         </div>
         <div class="four columns">
