--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -8,6 +8,9 @@
     <div class="row">
         <div class="eight columns">
             <%= render partial: "ad_title_box", locals: { ad: @ad } %>
+            <%- if current_user == @ad.user || current_user.status == 'admin' -%>
+              <%= render partial: "ad_status_box", locals: { ad: @ad } %>
+            <%- end -%>
             <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
             <%= render partial: "ad_gallery_mosaic", locals: { ad: @ad } %>
             <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
