--- a/app/assets/stylesheets/_ad_title_image.scss
+++ b/app/assets/stylesheets/_ad_title_image.scss
@@ -1,8 +1,21 @@
 .ad-title-image {
 
-    &__img {
+    &__holder {
         width: 100%;
-        height: auto;
+        height: 412px;
+
+        @media screen and (max-width: 640px) {
+            height: 240px;
+        }
     }
+
+    &__bg_img {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 50% 50%;
+        background-color: #f5f5f5;
+        height: 100%;
+    }
+
 
 }
