--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
     <div class="ad-title-image">
-        <%= image_tag(@ad.image_url_with_fallback(:hero),
-            size: AdImage.imageSize(:hero),
-            class: "ad-title-image__img") %>
+        <div class="ad-title-image__holder">
+            <% img_style = "background-image: url(#{@ad.image_url_with_fallback(:hero)});" %>
+            <div class="ad-title-image__bg_img"
+                 style="<%= img_style %>">
+        </div>
     </div>
 
     <div class="row">
