--- a/app/assets/stylesheets/_ad_gallery_mosaic.scss
+++ b/app/assets/stylesheets/_ad_gallery_mosaic.scss
@@ -2,22 +2,28 @@
 
 .ad-gallery-mosaic {
     background-color: white;
+    overflow: auto;
 
-    &__img_n_of-2,
-    &__img_n_of-3,
-    &__img_n_of-4,
-    &__img_n_of-5 {
+    &__bg_img_n_of_2,
+    &__bg_img_n_of_3,
+    &__bg_img_n_of_4,
+    &__bg_img_n_of_5 {
+        display: inline-block;
         float: left;
-        padding: 2px;
-        height: auto;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 50% 50%;
+        height: 200px;
+        width: 50%;
+        border: 1px solid white;
     }
 
-    &__img_n_of-2,
-    &__img_n_of-4 {
+    &__bg_img_n_of_2,
+    &__bg_img_n_of_4 {
         width: 50%;
     }
 
-    &__img_n_of-3 {
+    &__bg_img_n_of_3 {
         width: 50%;
 
         &:nth-of-type(3) {
@@ -25,7 +31,7 @@
         }
     }
 
-    &__img_n_of-5 {
+    &__bg_img_n_of_5 {
         width: 33.333333%;
 
         &:nth-of-type(4),
