--- a/app/views/ads/_ad_gallery_mosaic.html.erb
+++ b/app/views/ads/_ad_gallery_mosaic.html.erb
@@ -15,6 +15,8 @@
         <% end %>
         <% img_style = "background-image: url(#{last.image.url(:thumb)});" %>
         <div class="<%= "ad-gallery-mosaic__bg_img_n_of_#{image_count}" %>"
-             style="<%= img_style %>"></div>
+             style="<%= img_style %>">
+             <a href="#" class="ad-gallery-mosaic__gallery-link">Se alle bildene</a>
+         </div>
     </div>
 <% end %>
