Fixed missing close tag

--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -3,7 +3,7 @@
         <div class="ad-title-image__holder">
             <% img_style = "background-image: url(#{@ad.image_url_with_fallback(:hero)});" %>
             <div class="ad-title-image__bg_img"
-                 style="<%= img_style %>">
+                 style="<%= img_style %>"></div>
         </div>
     </div>
 
