--- a/app/assets/stylesheets/_ad_gallery_mosaic.scss
+++ b/app/assets/stylesheets/_ad_gallery_mosaic.scss
@@ -27,8 +27,9 @@
     &__bg_img_n_of_3 {
         width: 50%;
 
-        &:nth-of-type(3) {
+        &:nth-of-type(1) {
             width: 100%;
+            height: 260px;
         }
     }
 
