show prices for ads in a localized, consistent and pretty way

--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -1,6 +1,6 @@
 <div class="ad-booking-box">
     <h4 class="ad-booking-box__title">
-    <%= ad.price %>,-
+    <%= number_to_currency_pretty ad.price %>
         <span class="ad-booking-box__period">per døgn</span>
     </h4>
 
